* Add ability to translate tooltips
* Fix handling of multi-select questions with 10 or more options
* Fix tip display at right edge of windows
* Improve Wiki Article idevice handling of pages without content div
* Remove CSS letter-spacing to improve rendering with some fonts (Khmer)
* Automate building Debian changelog and versioning
* Translation updates

Version 1.03 (r3373) 2008-01-21
* Add linking across pages within a package (only for web export)
* Add note that SCORM export previous/next requires non-standard extension
* Add prototype IMS Common Cartridge export (no quizzing)
* Add Rel-License microformat to license urls in exported content
* Make importing old packages more robust (and remove unused resources)
* Fix merging packages that contain resources with same name as main package
* Fix upgrading of multichoice questions
* Fix escaping of ampersands in rich text fields, allowing HTML embedding
* Fix embedding of images and media with '#' in name
* Fix SCORM Quiz pass rate to signal pass for scores of exactly the rate
* Update to BeautifulSoup 3.0.5
* Translation updates

Version 1.02 (r3303) 2007-10-01
* Add ability to type resource name into url box (without browse button)
* Add CSS divs around nodes in single page and print exports for pagination
* Add detailed uninstall name, links, icon for Windows
* Make reading very old eXe packages more robust if corruption encountered
* Fix XHTML for div wrapper of Java Applet iDevice export
* Add ID, TH translations

Version 1.01 (r3265) 2007-09-05
* Add embedded MP3 player as a rich text editor media type
* Add FLV player as rich text editor media type
* Add DIV around each iDevice on web/ims/scorm export
* Add disabling SUBMIT ANSWERS button in SCORM Quiz after first submission
* Fix web folder export to convert filenames to safe ASCII characters
* Fix iPod Notes export to write UTF-8 index (non-ASCII node names)
* Fix XHTML generated for SCORM Quiz
* Fix XHTML generated for True-False question feedback