@@ -97,7 +97,7 @@
             </menu>
            <menu n:render="translate" id="help-menu" label="Help" accesskey="h">
               <menupopup id="help-popup">
-		<menuitem n:render="translate" label="Online eXe Manual" accesskey="m" oncommand="browseURL('http://exelearning.org/manual.php')"/>
+		<menuitem n:render="translate" label="eXe Manual" accesskey="m" oncommand="browseURL('file://%s/docs/manual/Online_manual.html')"/>
 		<menuitem n:render="translate" label="Release Notes" accesskey="n" oncommand="browseURL('file://%s/NEWS')"/>
 		<menuseparator/>
                 <!-- <menuitem n:render="translate" label="Register Online" accesskey="R" oncommand="registerOnline()"/> -->
